# whippet_sort

./: .gitignore  CMakeLists.txt  build_third_party.sh
benchmark/: CMakeLists.txt  benchmark_util.cc  io_encode_benchmark.cc
benchmark/generator/: README.md  __init__.py  column_meta.py  data_generator.py  example_config.json  parquet_generator.py
benchmark/parquet_generator/: README.md  column_meta.py  data_generator.py  example_config.json  parquet_generator.py
benchmark/read_order_bench/: .gitignore  read_encoding_bench.py  sorting_comparison_bench.py  test_use_config.json  util.py  with_duckdb.py
benchmark/read_order_percentile/: README.md
benchmark/sortproto/: benchmark.cc  parquet_sorter.cc  parquet_sorter.h
benchmark/stitching/: CMakeLists.txt  column.h  column_test.cc  time_breakdown.cc  timer.h
